fixed huge svg icons on mobile safari

--- a/public/src/vue/style.less
+++ b/public/src/vue/style.less
@@ -403,8 +403,8 @@ body {
         cursor: pointer;
 
         svg {
-          width: 100%;
-          height: 100%;
+          width: 20px;
+          height: 20px;
         }
 
         path {
